sidenav in layout issue resolved

--- a/src/app/layout/layout.component.css
+++ b/src/app/layout/layout.component.css
@@ -4,12 +4,23 @@
   
   .sidenav {
     width: 200px;
+    margin-top: 20px;
   }
   
   .sidenav .mat-toolbar {
     background: inherit;
   }
   
+.nav-item{
+  cursor: pointer;
+  background-color: rgba(204, 193, 193, 0.514);
+  margin: 1px;
+  border-radius: 5px;
+  text-align: center;
+  height: 33px;
+  border: 1px;
+  color: rgb(184, 53, 53);
+}
   .mat-toolbar.mat-primary {
     position: sticky;
     top: 0;
